# agnetouto

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
agentouto/: __init__.py  _constants.py  event_log.py  exceptions.py  loop_manager.py  model_metadata.py  provider.py  router.py  runtime.py  streaming.py  summarizer.py  tracing.py
agentouto/providers/: __init__.py  anthropic.py  google.py  openai.py  openai_responses.py
agnetouto/: __init__.py  agent.py  context.py  message.py  router.py  runtime.py  tool.py
agnetouto/providers/: __init__.py  anthropic.py  google.py  openai.py
ai-docs/: AGENT_LIST_ISOLATION.md  AI_INSTRUCTIONS.md  ARCHITECTURE.md  CONVENTIONS.md  MESSAGE_PROTOCOL.md  PHILOSOPHY.md  PROVIDER_BACKENDS.md  ROADMAP.md
tests/: test_background.py  test_core.py  test_event_log.py  test_extra_instructions.py  test_router.py  test_runtime.py  test_summarizer.py  test_tool_override.py  test_user_messages.py
