[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentouto"
version = "0.7.0"
description = "Multi-agent Python SDK with peer-to-peer agent communication"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "openai>=1.50.0",
    "anthropic>=0.34.0",
    "google-generativeai>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
